# dicekey

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
dicekey/: core.py  dicekey  diceware.py  main.py
