[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dicekey"
version = "0.0.1"
authors = [
  { name="Kris Lamoureux", email="kris@lamoureux.io" },
]
description = "A simple Python passphrase generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.krislamo.org/kris/dicekey"
